# MocapDrone

./: .gitignore  .gitmodules  CMakeLists.txt  ImagePipeline.py  README.md  VideoSplitter.py
MocapDrone/MocapLib/: DebugTools.py  ImagePipeline.py  PointEpipolePipeline.py  PointTrackCalibrate.py  VideoSplitter.py  VideoViewer.py
MocapDrone/tools/MocapDrone_CameraCalibration/: calibration.py  getImages.py
data/: InternalParams0.json  InternalParams2.json  InternalParamsA.json
src/: camera_feed_process.cpp  camera_pipeline.cpp  listen_image.cpp  multithread_videocapture.h  send_image.cpp  test.cpp
types/: corresponding_points_t.lcm  image_grey_t.lcm  image_points_t.lcm  image_t.lcm  point2d_pairs_t.lcm  point2d_t.lcm
